# simple-chess

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
engine/: CMakeLists.txt
engine/include/: piece.h
engine/src/: piece.cpp
include/: chess_board.h  piece_sprite.h
src/: chess_board.cpp  main.cpp
ui/: CMakeLists.txt
ui/include/: bishop_sprite.h  chess_board.h  game.h  king_sprite.h  knight_sprite.h  pawn_sprite.h  piece_sprite.h  queen_sprite.h  rook_sprite.h  sprite_factory.h
ui/src/: bishop_sprite.cpp  chess_board.cpp  game.cpp  king_sprite.cpp  knight_sprite.cpp  pawn_sprite.cpp  piece_sprite.cpp  queen_sprite.cpp  rook_sprite.cpp  sprite_factory.cpp
